--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "access": "public"
   },
   "bin": {
-    "pullback": "dist/main.js"
+    "pullback": "dist/cli.js"
   },
   "scripts": {
+    "build": "babel src -d dist",
     "pretest": "eslint src/**",
     "test": "exit 0;"
   },
@@ -26,6 +27,9 @@
   "homepage": "https://github.com/sudaraka/pullback#readme",
   "devDependencies": {
     "@sudaraka/eslint-config-default": "^0.3.1",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "eslint": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
