--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "pullback": "dist/cli.js"
   },
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel src -d dist --ignore '**/*__test.js'",
     "postbuild": "chmod +x dist/cli.js",
     "clean": "rm -fr dist/",
     "start": "npm run build -- -w",
     "pretest": "eslint src/**",
-    "test": "exit 0;"
+    "test": "mocha --compilers js:babel-register --check-leaks --bail --growl --recursive src/**/*__test.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,9 @@
     "@sudaraka/eslint-config-default": "^0.4.0",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
-    "eslint": "^2.0.0"
+    "eslint": "^2.0.0",
+    "expect": "^1.14.0",
+    "mocha": "^2.4.5"
   },
   "dependencies": {}
 }
