--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "expect": "^1.14.0",
     "mocha": "^2.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "find-config": "^1.0.0",
+    "ramda": "^0.19.1"
+  }
 }
