--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sudaraka/eslint-config-default": "^0.4.0",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "eslint": "^2.2.0",
     "expect": "^1.14.0",
     "mocha": "^2.4.5"
