--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "find-config": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "node-fetch": "^1.3.3",
     "ramda": "^0.19.1"
   }
